init: rename T6e to Mocks

--- a/Benchmarks/aweXpect.Mocks.Benchmarks/aweXpect.Mocks.Benchmarks.csproj
+++ b/Benchmarks/aweXpect.Mocks.Benchmarks/aweXpect.Mocks.Benchmarks.csproj
@@ -14,7 +14,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\Source\aweXpect.T6e\aweXpect.T6e.csproj"/>
+		<ProjectReference Include="..\..\Source\aweXpect.Mocks\aweXpect.Mocks.csproj"/>
 	</ItemGroup>
 
 </Project>
