--- a/Tests/aweXpect.Mocks.Api.Tests/aweXpect.Mocks.Api.Tests.csproj
+++ b/Tests/aweXpect.Mocks.Api.Tests/aweXpect.Mocks.Api.Tests.csproj
@@ -5,7 +5,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\Source\aweXpect.T6e\aweXpect.T6e.csproj" />
+		<ProjectReference Include="..\..\Source\aweXpect.Mocks\aweXpect.Mocks.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
