--- a/Source/aweXpect.Mocks/aweXpect.Mocks.csproj
+++ b/Source/aweXpect.Mocks/aweXpect.Mocks.csproj
@@ -1,22 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0</TargetFrameworks>
-		<IncludeBuildOutput>false</IncludeBuildOutput>
-		<Nullable>enable</Nullable>
-		<ImplicitUsings>true</ImplicitUsings>
-		<LangVersion>Latest</LangVersion>
-		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
-		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+		<Description>Mocking Framework for aweXpect.</Description>
 	</PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" PrivateAssets="all" />
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" PrivateAssets="all" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true"
-			  PackagePath="analyzers/dotnet/cs" Visible="false" />
-	</ItemGroup>
 </Project>
