Avoid ConcurrentDictionary in source generators

--- a/Source/aweXpect.Mocks/aweXpect.Mocks.csproj
+++ b/Source/aweXpect.Mocks/aweXpect.Mocks.csproj
@@ -4,4 +4,10 @@
 		<Description>Mocking Framework for aweXpect.</Description>
 	</PropertyGroup>
 
+	<ItemGroup>
+		<None
+			Include="$(MSBuildProjectDirectory)\..\aweXpect.Mocks.SourceGenerators\bin\$(Configuration)\netstandard2.0\aweXpect.Mocks.SourceGenerators.dll"
+			Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+	</ItemGroup>
+
 </Project>
