--- a/Source/aweXpect.Mocks.SourceGenerators/aweXpect.Mocks.SourceGenerators.csproj
+++ b/Source/aweXpect.Mocks.SourceGenerators/aweXpect.Mocks.SourceGenerators.csproj
@@ -19,4 +19,8 @@
 		<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true"
 			  PackagePath="analyzers/dotnet/cs" Visible="false" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Remove="Internals\Log.cs" />
+	</ItemGroup>
 </Project>
