--- a/Tests/aweXpect.Mocks.Tests/aweXpect.Mocks.Tests.csproj
+++ b/Tests/aweXpect.Mocks.Tests/aweXpect.Mocks.Tests.csproj
@@ -6,4 +6,13 @@
 		
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Compile Remove="Generated\net8.0\aweXpect.Mocks.SourceGenerators\aweXpect.Mocks.SourceGenerators.MockRegistrationGenerator\Mock.g.cs" />
+	  <Compile Remove="Generated\net48\aweXpect.Mocks.SourceGenerators\aweXpect.Mocks.SourceGenerators.MockGenerator\MockForIUserService.g.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Generated\net8.0\aweXpect.Mocks.SourceGenerators\aweXpect.Mocks.SourceGenerators.MockGenerator\" />
+	</ItemGroup>
+
 </Project>
