feat: initial POC implementation (#3)
This PR introduces an initial proof-of-concept (POC) implementation for a mocking framework called `aweXpect.Mocks`. The implementation includes a source generator-based approach to create mock objects for interfaces at compile time.

### Key changes:
- Introduces a new mocking framework with source generators
- Implements core mock functionality with setup and callback mechanisms
- Provides parameter matching capabilities for mock method setups

--- a/Source/aweXpect.Mocks/aweXpect.Mocks.csproj
+++ b/Source/aweXpect.Mocks/aweXpect.Mocks.csproj
@@ -1,11 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<RootNamespace>aweXpect</RootNamespace>
+		<Description>Mocking Framework for aweXpect.</Description>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="aweXpect.Core"/>
+		<None
+			Include="$(MSBuildProjectDirectory)\..\aweXpect.Mocks.SourceGenerators\bin\$(Configuration)\netstandard2.0\aweXpect.Mocks.SourceGenerators.dll"
+			Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
 	</ItemGroup>
 
 </Project>
