--- a/Tests/aweXpect.Mocks.Tests/aweXpect.Mocks.Tests.csproj
+++ b/Tests/aweXpect.Mocks.Tests/aweXpect.Mocks.Tests.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\Source\aweXpect.Mocks.SourceGenerators\aweXpect.Mocks.SourceGenerators.csproj" OutputItemType="Analyzer" />
 		<ProjectReference Include="..\..\Source\aweXpect.Mocks\aweXpect.Mocks.csproj" />
 	</ItemGroup>
 
