--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,29 +1,38 @@
 <Project>
-  <PropertyGroup>
-    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageVersion Include="aweXpect" Version="2.21.1" />
-    <PackageVersion Include="aweXpect.Core" Version="2.18.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageVersion Include="Nullable" Version="1.3.1" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageVersion Include="Nuke.Common" Version="9.0.4" />
-    <PackageVersion Include="Nuke.Components" Version="9.0.4" />
-    <PackageVersion Include="LibGit2Sharp" Version="0.30.0" />
-    <PackageVersion Include="SharpCompress" Version="0.39.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageVersion Include="Meziantou.Analyzer" Version="2.0.163" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-    <PackageVersion Include="BenchmarkDotNet" Version="0.14.0" />
-    <PackageVersion Include="xunit.v3" Version="3.0.1" />
-    <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.4" />
-    <PackageVersion Include="coverlet.collector" Version="6.0.4" />
-    <PackageVersion Include="PublicApiGenerator" Version="11.4.6" />
-  </ItemGroup>
+	<PropertyGroup>
+		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageVersion Include="aweXpect" Version="2.25.0"/>
+		<PackageVersion Include="aweXpect.Core" Version="2.23.0"/>
+	</ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="Nullable" Version="1.3.1"/>
+	</ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="Nuke.Common" Version="9.0.4"/>
+		<PackageVersion Include="Nuke.Components" Version="9.0.4"/>
+		<PackageVersion Include="LibGit2Sharp" Version="0.31.0"/>
+		<PackageVersion Include="SharpCompress" Version="0.39.0"/>
+	</ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="Meziantou.Analyzer" Version="2.0.163"/>
+		<PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0"/>
+		<PackageVersion Include="Microsoft.CodeAnalysis" Version="4.11.0"/>
+		<PackageVersion Include="Microsoft.CodeAnalysis.Common" Version="4.11.0"/>
+		<PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0"/>
+		<PackageVersion Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.11.0"/>
+		<PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.11.0"/>
+		<PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing" Version="1.1.2"/>
+		<PackageVersion Include="Microsoft.CodeAnalysis.CSharp.CodeFix.Testing" Version="1.1.2"/>
+		<PackageVersion Include="Microsoft.CodeAnalysis.CSharp.CodeRefactoring.Testing" Version="1.1.2"/>
+	</ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.13.0"/>
+		<PackageVersion Include="BenchmarkDotNet" Version="0.14.0"/>
+		<PackageVersion Include="xunit.v3" Version="3.0.1"/>
+		<PackageVersion Include="xunit.runner.visualstudio" Version="3.1.4"/>
+		<PackageVersion Include="coverlet.collector" Version="6.0.4"/>
+		<PackageVersion Include="PublicApiGenerator" Version="11.4.6"/>
+	</ItemGroup>
 </Project>
