--- a/Source/Directory.Build.props
+++ b/Source/Directory.Build.props
@@ -15,11 +15,11 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;net8.0;net10.0</TargetFrameworks>
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<LangVersion>latest</LangVersion>
+		<LangVersion>preview</LangVersion>
 		<Nullable>enable</Nullable>
 		<NoWarn>$(NoWarn);1701;1702</NoWarn>
 		<WarningsNotAsErrors>CS1591;NU5104</WarningsNotAsErrors>
