--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,6 +7,7 @@
 		<PackageVersion Include="aweXpect.Core" Version="2.23.0"/>
 	</ItemGroup>
 	<ItemGroup>
+		<PackageVersion Include="IsExternalInit" Version="1.0.3" />
 		<PackageVersion Include="Nullable" Version="1.3.1"/>
 	</ItemGroup>
 	<ItemGroup>
