--- a/Tests/aweXpect.Mocks.Api.Tests/aweXpect.Mocks.Api.Tests.csproj
+++ b/Tests/aweXpect.Mocks.Api.Tests/aweXpect.Mocks.Api.Tests.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net8.0</TargetFrameworks>
+		<TargetFrameworks>net10.0</TargetFrameworks>
+		<OutputType>exe</OutputType>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -9,6 +10,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Remove="xunit"/>
+		<PackageReference Include="xunit.v3"/>
 		<PackageReference Include="PublicApiGenerator"/>
 	</ItemGroup>
 
